--- a/question.ipynb
+++ b/question.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nông nghiệp\n"
+    "# Mục Lục\n",
+    "\n",
+    "- [Nông nghiệp](#Agriculture)\n",
+    "- [Dân số](#Population)\n",
+    "- [Y tế, giáo dục](#Medical,Education)\n",
+    "- [Giao thông vận tải](#Transportation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agriculture"
    ]
   },
   {
@@ -293,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dân số\n"
+    "# Population\n"
    ]
   },
   {
@@ -301,6 +313,71 @@
    "metadata": {},
    "source": [
     "![Alt Text](image_path_or_url)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Medical,Education"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transportation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Tình hình vận chuyển khách trong từng tỉnh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biểu đồ\n",
+    "<img src=\"./Image/41.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
+    "\n",
+    "### Nhận xét\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Phân bố lượt luân chuyển khối lượng hàng hóa trong từng tỉnh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biểu đồ\n",
+    "<img src=\"./Image/42.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
+    "### Nhận xét"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Tình hình phát triển giao thông vận tải tại ba khu vực Việt Nam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biểu đồ\n",
+    "<img src=\"./Image/43.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
+    "\n",
+    "### Nhận xét"
    ]
   }
  ],
