--- a/question.ipynb
+++ b/question.ipynb
@@ -4,19 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mục Lục\n",
-    "\n",
-    "- [Nông nghiệp](#nongnghiep)\n",
-    "- [Dân số](#Population)\n",
-    "- [Y tế, giáo dục](#Medical,Education)\n",
-    "- [Giao thông vận tải](#Transportation)"
+    "<h1 style=\"text-align: center; color: #2a9d8f; font-size: 48px;\">📊 Báo cáo Cuối Kỳ 🌟</h1>\n",
+    "<h2 style=\"text-align: center; color: #264653; font-size: 36px;\">📈 Trực Quan Hóa Dữ Liệu 📉</h2>\n",
+    "<hr style=\"border: 2px solid #e76f51; margin: 20px 0;\">\n",
+    "<p style=\"text-align: center; font-size: 24px; color: #1d3557;\">\n",
+    "  Chủ đề: Dân số, Nông nghiệp, Y tế Giáo dục, Giao thông Vận tải 🚜🏥📚🚦\n",
+    "</p>\n",
+    "<p style=\"text-align: center; font-size: 20px; color: #1d3557;\">\n",
+    "  <strong>Câu hỏi khai thác dữ liệu:</strong> Làm thế nào để cải thiện hiệu quả phân bổ tài nguyên và tối ưu hóa chính sách?\n",
+    "</p>\n",
+    "<p style=\"text-align: center; font-size: 20px; color: #1d3557;\">\n",
+    "  <strong>Giảng viên hướng dẫn:</strong> TS. Bùi Tiến Lên\n",
+    "</p>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agriculture"
+    "<h2 style=\"text-align: left; color: #2a9d8f; font-size: 40px; font-weight: bold;\">📑 Mục lục</h2>\n",
+    "<ul style=\"font-size: 25px; color: #1d3557; list-style-type: none; padding-left: 20px;\">\n",
+    "    <li style=\"margin: 10px 0;\">\n",
+    "        <a href=\"#nongnghiep\" style=\"color: #1d3557; text-decoration: none;\">\n",
+    "            <strong>🌾 Nông nghiệp</strong>\n",
+    "        </a>\n",
+    "    </li>\n",
+    "    <li style=\"margin: 10px 0;\">\n",
+    "        <a href=\"#Population\" style=\"color: #1d3557; text-decoration: none;\">\n",
+    "            <strong>👨‍👩‍👧‍👦 Dân số</strong>\n",
+    "        </a>\n",
+    "    </li>\n",
+    "    <li style=\"margin: 10px 0;\">\n",
+    "        <a href=\"#MedicalEducation\" style=\"color: #1d3557; text-decoration: none;\">\n",
+    "            <strong>🏥 Y tế, Giáo dục 🎓</strong>\n",
+    "        </a>\n",
+    "    </li>\n",
+    "    <li style=\"margin: 10px 0;\">\n",
+    "        <a href=\"#Transportation\" style=\"color: #1d3557; text-decoration: none;\">\n",
+    "            <strong>🚗 Giao thông vận tải</strong>\n",
+    "        </a>\n",
+    "    </li>\n",
+    "</ul>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 id=\"nongnghiep\" style=\"color: #e76f51; font-size: 40px;\">🌾 Nông nghiệp</h3>"
    ]
   },
   {
@@ -279,33 +314,33 @@
     "\n",
     "<img src=\"./Image/5_kl.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
     "\n",
-    "#### Nhận xét cho cả ngô và khoai lang\n",
+    "#### **Nhận xét cho cả ngô và khoai lang**\n",
     "\n",
-    "Đắk Lak dẫn đầu cả nước với lần lượt là 0.5 triệu tấn (**ngô**) và 0.14 triệu tấn (**khoai lang**)\n",
+    "- Đắk Lak dẫn đầu cả nước với lần lượt là 0.5 triệu tấn (**ngô**) và 0.14 triệu tấn (**khoai lang**)\n",
     "\n",
-    "Lí do:\n",
+    "**Lí do:**\n",
     "\n",
-    "Đối với ngô:\n",
+    "- **Đối với ngô:**\n",
     "\n",
-    "- Đất đỏ bazan màu mỡ: Đắk Lắk có diện tích đất đỏ bazan lớn, rất giàu dinh dưỡng và thoát nước tốt, là môi trường lý tưởng cho cây ngô phát triển.\n",
-    "- Khí hậu phù hợp: Khí hậu Tây Nguyên có hai mùa rõ rệt (mùa mưa và mùa khô) với nhiệt độ ổn định, thuận lợi cho ngô phát triển trong các vụ khác nhau.\n",
+    "    - Đất đỏ bazan màu mỡ: Đắk Lắk có diện tích đất đỏ bazan lớn, rất giàu dinh dưỡng và thoát nước tốt, là môi trường lý tưởng cho cây ngô phát triển.\n",
+    "    - Khí hậu phù hợp: Khí hậu Tây Nguyên có hai mùa rõ rệt (mùa mưa và mùa khô) với nhiệt độ ổn định, thuận lợi cho ngô phát triển trong các vụ khác nhau.\n",
     "\n",
-    "Đối với khoai lang:\n",
+    "- **Đối với khoai lang:**\n",
     "\n",
-    "- Đất pha cát và đất xốp: Đắk Lắk có nhiều vùng đất phù hợp cho khoai lang, đặc biệt là đất pha cát và đất đỏ, giúp củ khoai phát triển to, đều và chất lượng cao.\n",
-    "- Khả năng chịu hạn: Cả ngô và khoai lang đều là cây trồng chịu hạn tốt, thích hợp với mùa khô kéo dài ở Đắk Lắk.\n",
+    "    - Đất pha cát và đất xốp: Đắk Lắk có nhiều vùng đất phù hợp cho khoai lang, đặc biệt là đất pha cát và đất đỏ, giúp củ khoai phát triển to, đều và chất lượng cao.\n",
+    "    - Khả năng chịu hạn: Cả ngô và khoai lang đều là cây trồng chịu hạn tốt, thích hợp với mùa khô kéo dài ở Đắk Lắk.\n",
     "\n",
-    "Thị trường tiêu thụ lớn và ổn định:\n",
+    "- **Thị trường tiêu thụ lớn và ổn định:**\n",
     "\n",
-    "- Nhu cầu ngô làm thức ăn chăn nuôi: Ngô của Đắk Lắk được tiêu thụ mạnh bởi các nhà máy chế biến thức ăn chăn nuôi ở khu vực miền Trung và miền Nam.\n",
-    "- Xuất khẩu khoai lang: Khoai lang Đắk Lắk, đặc biệt giống khoai tím Nhật, có giá trị cao và được xuất khẩu sang các thị trường lớn như Nhật Bản, Hàn Quốc và Trung Quốc.\n"
+    "    - Nhu cầu ngô làm thức ăn chăn nuôi: Ngô của Đắk Lắk được tiêu thụ mạnh bởi các nhà máy chế biến thức ăn chăn nuôi ở khu vực miền Trung và miền Nam.\n",
+    "    - Xuất khẩu khoai lang: Khoai lang Đắk Lắk, đặc biệt giống khoai tím Nhật, có giá trị cao và được xuất khẩu sang các thị trường lớn như Nhật Bản, Hàn Quốc và Trung Quốc.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Population\n"
+    "<h3 id=\"Population\" style=\"color: #e76f51; font-size: 40px;\">👨‍👩‍👧‍👦 Dân số</h3>\n"
    ]
   },
   {
@@ -319,14 +354,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Medical,Education"
+    "<h3 id=\"MedicalEducation\" style=\"color: #e76f51; font-size: 40px;\">🏥 Y tế, Giáo dục 🎓</h3>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transportation"
+    "<h3 id=\"Transportation\" style=\"color: #e76f51; font-size: 40px;\">🚗 Giao thông vận tải</h3>"
    ]
   },
   {
@@ -454,8 +489,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
