--- a/question.ipynb
+++ b/question.ipynb
@@ -56,6 +56,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt Text](Image/Sample.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nhận xét, kể chuyện ...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -333,7 +347,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt Text](image_path_or_url)\n"
+    "## 1. Mật độ dân số của nước ta năm 2022 \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biểu đồ\n",
+    "<img src=\"./Image/TL - 1.png\" alt =\"Hinhanh1\" style=\"width: 80%\">\n",
+    "\n",
+    "### Nhận xét\n",
+    "\n",
+    "**Dân  cư phân bố không đồng đều giữa các địa phương**\n",
+    "\n",
+    "#### Miền Bắc\n",
+    "- Các tỉnh có mật độ dân số cao nằm ở đồng bằng sông Hồng, đặc biệt là Hà Nội với mật độ 2.511 nghìn người trên km2. Giải thích điều trên:\n",
+    "    - Điều kiện tự nhiên thuận lợi như địa hình bằng phẳng, đất đai màu mỡ nhờ phù sa từ hệ thống sông Hồng tạo điều kiện thuận lợi cho sản xuất nông nghiệp.\n",
+    "    - Đồng bằng được khai thác lâu đời, là cái nôi của nền văn minh lúa nước.\n",
+    "    - Là một trong những trung tâm kinh tế nước ta, cơ sở hạ tầng phát triển giúp thu hút lao động từ các khu vực khác.\n",
+    "- Các tỉnh ở vùng Tây Bắc có mật độ dân số thấp hơn nhiều. Lý do là:\n",
+    "    - Có địa hình núi cao hiểm trở, đất đai mang đặc điểm của miền núi, cao nguyên gây nhiều khó khăn cho cuộc sống và các hoạt động kinh tế - xã hội.\n",
+    "    - Cơ sở hạ tầng, cơ sở vật chất kĩ thuật kém phát triển (nhất là giao thông vận tải) từ đó gây khó khăn cho việc phát triển kinh tế dẫn đến không thu hút được lao động.\n",
+    "\n",
+    "#### Miền Trung\n",
+    "- Đối với các tỉnh giáp biển, mật độ dân số trung bình, tập trung chủ yếu ở các tỉnh như Thanh Hóa, Nha Trang, Đà Nẵng . Các lý do đó là:\n",
+    "    - Địa hình hẹp và dài do nằm giữa núi và biển, giới hạn diện tích đất đai. Điều kiện thời tiết khắc nghiệt do bão, lũ gây khó khăn cho đời sống và sản xuất. Đất đai không màu mỡ.\n",
+    "    - Cơ sở hạ tầng chưa đồng bộ, phát triển kinh tế không đồng đều.\n",
+    "    \n",
+    "- Đối với các tỉnh Tây Nguyên, mật độ dân số thấp hơn. Nguyên nhân là vì:\n",
+    "    - Địa hình - đất đai mang tính chất miền núi, cao nguyên rộng lớn, rừng còn nhiều, địa hình khá hiểm trở chưa được khai thác nhiều.\n",
+    "    - Là nơi cư trú của phần lớn các dân tộc ít người.\n",
+    "    - Cơ sở vật chất và cơ sở hạ tầng chưa phát triển.\n",
+    "#### Miền Nam\n",
+    "- Các tỉnh ở phía Nam, nhìn chung có mật độ dân số cao hơn so với các khu vực khác đặc biệt là Thành phố Hồ Chí Minh với mật độ là 4.481 nghìn người trên km2. Cao nhất cả nước. Lý do là:\n",
+    "    - Ở đây có Đông Nam Bộ là trung tâm công nghiệp, dịch vụ và thương mại hàng đầu Việt Nam và Đồng bằng sông Cửu Long, là vùng đồng bằng lớn nhất Việt Nam, đất đai màu mỡ rất phù hợp để phát triển nông nghiệp."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Tình hình phát triển dân số của nước ta từ năm 2000-2022 và tác động của sự phát triển đó đến giáo dục và y tế của nước ta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biểu đồ\n",
+    "<img src=\"./Image/TL-2a.png\" style=\"width: 80%\">\n",
+    "\n",
+    "### Nhận xét\n",
+    "\n",
+    "#### Về tình hình phát triển dân số của nước ta từ năm 2000-2022\n",
+    "- Dân số nước ta từ 2000-2022 tăng nhanh, tỉ lệ gia tăng dân số có xu hướng giảm cụ thể mặc dù dân số tăng nhưng số người tăng mỗi năm vẫn khoảng 1 triệu người nên tỉ lệ gia tăng dân số giảm. Lý do là bởi:\n",
+    "    - Do dân số nước ta đông và quy mô dân số lớn\n",
+    "    - Cơ cấu dân số có nhiều dân số trẻ và đang nằm trong độ tuổi sinh nở;\n",
+    "    - Các chính sách kế hoạch hóa gia đình và sự cải thiện về chăm sóc sức khỏe, giáo dục và kinh tế tác động đến tỉ lệ gia tăng dân số\n",
+    "\n",
+    "#### Về tác động của việc phát triển dân số đến giáo dục của nước ta từ năm 2000-2022\n",
+    "- Trong giai đoạn 2000-2002, số lượng các trường học không có dấu hiệu tăng từ đó có thể làm ảnh hưởng đến sĩ số lớp, làm cho các trường học bị quá tải.\n",
+    "- Trong giai đoạn 2002-2018, số lượng các trường học tăng khá nhanh đặc biệt là trường tiểu học, THCS, THPT điều đó đáp ứng được việc tăng số lượng dân số trong độ tuổi đi học. Ngoài ra do nhà nước mở rộng quy mô giáo dục, đầu tư xây dựng cơ sở vật chất mở rộng mạng lưới trường học, đặc biệt là ở vùng nông thôn, miền núi.\n",
+    "- Trong giai đoạn 2019-2022, số lượng trường THPT có xu hướng giữ nguyên trong khi đó số lượng trường tiểu học và trường THCS lại giảm đột ngột ở năm 2019 và giảm dần qua các năm sau. Nguyên nhân chính là do nhiều địa phương đã tiến hành sát nhập các trường có quy mô nhỏ hoặc không đáp ứng đủ điều kiện cơ sở vật chất và nhân lực.\n",
+    "- Biểu đồ cho thấy mối quan hệ mật thiết giữa dân số và số lượng trường học. Giai đoạn 2002-2018 là thời kỳ phát triển mạnh mẽ về giáo dục, với sự gia tăng số lượng trường học đáp ứng tốt nhu cầu dân số. Sau 2018, dù số lượng giảm nhẹ, hệ thống giáo dục vẫn giữ được sự ổn định, chứng minh hiệu quả của các chính sách quy hoạch và phát triển bền vững của nước ta.\n",
+    "\n",
+    "<img src =\"./Image/TL-2b.png\" style = \"width: 80%\">\n",
+    "\n",
+    "#### Về tác động của việc phát triển dân số đến y tế của nước ta từ năm 2000-2022\n",
+    "- Trong giai đoạn 2000-2018, số lượng bệnh viện và trạm y tế có xu hướng tăng và trạm y tế tăng nhanh hơn. Nguyên nhân là vì chính sách chú trọng phát triển y tế cơ sở, chi phí xây dựng thấp, khả năng đáp ứng nhanh nhu cầu dân số tăng, vai trò quan trọng trong chăm sóc sức khỏe cộng đồng và phòng chống dịch bệnh. Trong khi đó, bệnh viện phát triển với tốc độ chậm hơn do yêu cầu nguồn lực lớn và tập trung vào chất lượng dịch vụ y tế chuyên sâu.\n",
+    "- Trong giai đoạn 2019-2022, số lượng bệnh viện và trạm y tế bị giảm ở năm 2018 và lại tăng dần ở các năm sau này. Lý do:\n",
+    "    - Chính phủ hoặc các cơ quan chức năng có thể đã tiến hành việc tinh gọn, cải cách hoặc sắp xếp lại các cơ sở y tế để tăng hiệu quả hoạt động. Điều này có thể bao gồm việc đóng cửa hoặc hợp nhất một số bệnh viện và trạm y tế kém hiệu quả hoặc không đáp ứng được yêu cầu về chất lượng dịch vụ.\n",
+    "    - Vào năm 2020, Việt Nam bùng phát đại dịch Covid-19, để thích ứng điều này, nước ta xây dựng thêm trạm y tế và bệnh viện nhằm đáp ứng nhu cầu phòng chống dịch bệnh.\n",
+    "- Biểu đồ cho hấy mối quan hệ giữa dân số và số lượng bệnh viện, trạm y tế. Chứng minh được sự ổn định và hiệu quả về chính sách y tế ở nước ta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Sự biến động về giới tính và tình hình đô thị hóa ở Việt Nam đang phát triển như thế nào?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Biểu đồ\n",
+    "\n",
+    "<img src=\"./Image/TL-3a.png\" style=\"width: 80%\">\n",
+    "\n",
+    "#### Nhận xét về giới tính\n",
+    "- Từ năm 2000-2022, sự chênh lệch giới tính giữa các miền không quá lớn và như nhau. tuy nhiên xu hướng tỉ lệ giới nam tăng, nữ giảm. Nguyên nhân do là do áp lực giảm sinh, mỗi cặp vợ chồng chỉ sinh 1-2 con nhưng phải có con trai nên đã sử dụng các dịch vụ lựa chọn giới tính thai nhi; do nhu cầu kinh tế, điều kiện lao động thủ công làm nhiều công việc nặng nhọc trong các ngành nông - lâm - ngư nghiệp, khai thác khoáng sản, đi biển đánh bắt xa bờ,... đòi hỏi sức lao động cơ bắp của con trai và con trai là trụ cột về kinh tế là sự bảo đảm bình yên cho cả gia đình; do gần 70% dân số nước ta còn sống ở nông thôn, hầu hết không có lương hưu khi về già và trách nhiệm phụng dưỡng chủ yếu thuộc về con trai…\n",
+    "\n",
+    "<img src=\"./Image/TL-3b.png\" style=\"width: 80%\">\n",
+    "#### Nhận xét về đô thị hóa\n",
+    "- Từ năm 2000-2022, cả nước ta dân số thành thị đều tăng rất nhanh. Nguyên nhân là vì di cư từ nông thôn ra thành thị tìm kiếm việc làm, cải thiện cơ sở hạ tầng và giao thông, phát triển mạnh các ngành công nghiệp và dịch vụ, nâng cao chất lượng sống ở thành phố, chính sách phát triển đô thị của chính phủ, và tăng trưởng kinh tế cùng hội nhập quốc tế tạo ra nhiều cơ hội việc làm.\n",
+    "- Trong đó, miền Nam có tỉ lệ dân số thành thị cao hơn so với các miền còn lại. Lý do là vì kinh tế phát triển mạnh, tập trung nhiều khu công nghiệp, chính sách thu hút đầu tư, cơ sở hạ tầng giao thông tốt, và sự đa dạng cơ hội nghề nghiệp, đặc biệt là tại TP.HCM và các thành phố lớn khác."
    ]
   },
   {
@@ -404,7 +516,7 @@
    "source": [
     "### Biểu đồ\n",
     "<img src=\"./Image/42.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
-    "### Nhận xét\n",
+    "\n",
     "### Nhận xét\n",
     "\n",
     "**Thành phố Hải Phòng dẫn đầu cả nước về khối lượng luân chuyển hàng hóa, đạt mức cao nhất trên bản đồ.**\n",
@@ -490,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
