--- a/doctor per people.ipynb
+++ b/doctor per people.ipynb
@@ -619,6 +619,7 @@
     "    cv=5,\n",
     "    verbose=2\n",
     ")\n",
+    "\n",
     "grid_search.fit(X_train, y_train)\n",
     "best_model = grid_search.best_estimator_\n",
     "\n",
@@ -627,7 +628,7 @@
     "evaluate_and_plot(best_model, X_train, X_test, y_train, y_test,\"Optimized Random Forest\")\n",
     "\n",
     "# # Lưu mô hình tốt nhất\n",
-    "# joblib.dump(best_model, \"best_rf_model.pkl\")"
+    "# joblib.dump(best_model, \"best_rf_model.pkl\")\n"
    ]
   }
  ],
