updated image and ipynb

--- a/question.ipynb
+++ b/question.ipynb
@@ -56,20 +56,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Alt Text](Image/Sample.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nhận xét, kể chuyện ...\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -356,7 +342,7 @@
    "source": [
     "### Biểu đồ\n",
     "\n",
-    "<img src=\"./Image/TL - 1.png\" alt =\"Hinhanh1\" style=\"width: 80%\">\n",
+    "<img src=\"./Image/21.png\" alt =\"Hinhanh1\" style=\"width: 80%\">\n",
     "\n",
     "### Nhận xét\n",
     "\n",
@@ -401,7 +387,7 @@
    "source": [
     "### Biểu đồ\n",
     "\n",
-    "<img src=\"./Image/TL-2a.png\" style=\"width: 80%\">\n",
+    "<img src=\"./Image/22.1.png\" style=\"width: 80%\">\n",
     "\n",
     "### Nhận xét\n",
     "\n",
@@ -419,7 +405,7 @@
     "- Trong giai đoạn 2019-2022, số lượng trường THPT có xu hướng giữ nguyên trong khi đó số lượng trường tiểu học và trường THCS lại giảm đột ngột ở năm 2019 và giảm dần qua các năm sau. Nguyên nhân chính là do nhiều địa phương đã tiến hành sát nhập các trường có quy mô nhỏ hoặc không đáp ứng đủ điều kiện cơ sở vật chất và nhân lực.\n",
     "- Biểu đồ cho thấy mối quan hệ mật thiết giữa dân số và số lượng trường học. Giai đoạn 2002-2018 là thời kỳ phát triển mạnh mẽ về giáo dục, với sự gia tăng số lượng trường học đáp ứng tốt nhu cầu dân số. Sau 2018, dù số lượng giảm nhẹ, hệ thống giáo dục vẫn giữ được sự ổn định, chứng minh hiệu quả của các chính sách quy hoạch và phát triển bền vững của nước ta.\n",
     "\n",
-    "<img src =\"./Image/TL-2b.png\" style = \"width: 80%\">\n",
+    "<img src =\"./Image/22.2.png\" style = \"width: 80%\">\n",
     "\n",
     "#### Về tác động của việc phát triển dân số đến y tế của nước ta từ năm 2000-2022\n",
     "\n",
@@ -443,13 +429,13 @@
    "source": [
     "#### Biểu đồ\n",
     "\n",
-    "<img src=\"./Image/TL-3a.png\" style=\"width: 80%\">\n",
+    "<img src=\"./Image/23.1.png\" style=\"width: 80%\">\n",
     "\n",
     "#### Nhận xét về giới tính\n",
     "\n",
     "- Từ năm 2000-2022, sự chênh lệch giới tính giữa các miền không quá lớn và như nhau. tuy nhiên xu hướng tỉ lệ giới nam tăng, nữ giảm. Nguyên nhân do là do áp lực giảm sinh, mỗi cặp vợ chồng chỉ sinh 1-2 con nhưng phải có con trai nên đã sử dụng các dịch vụ lựa chọn giới tính thai nhi; do nhu cầu kinh tế, điều kiện lao động thủ công làm nhiều công việc nặng nhọc trong các ngành nông - lâm - ngư nghiệp, khai thác khoáng sản, đi biển đánh bắt xa bờ,... đòi hỏi sức lao động cơ bắp của con trai và con trai là trụ cột về kinh tế là sự bảo đảm bình yên cho cả gia đình; do gần 70% dân số nước ta còn sống ở nông thôn, hầu hết không có lương hưu khi về già và trách nhiệm phụng dưỡng chủ yếu thuộc về con trai…\n",
     "\n",
-    "<img src=\"./Image/TL-3b.png\" style=\"width: 80%\">\n",
+    "<img src=\"./Image/23.2.png\" style=\"width: 80%\">\n",
     "#### Nhận xét về đô thị hóa\n",
     "- Từ năm 2000-2022, cả nước ta dân số thành thị đều tăng rất nhanh. Nguyên nhân là vì di cư từ nông thôn ra thành thị tìm kiếm việc làm, cải thiện cơ sở hạ tầng và giao thông, phát triển mạnh các ngành công nghiệp và dịch vụ, nâng cao chất lượng sống ở thành phố, chính sách phát triển đô thị của chính phủ, và tăng trưởng kinh tế cùng hội nhập quốc tế tạo ra nhiều cơ hội việc làm.\n",
     "- Trong đó, miền Nam có tỉ lệ dân số thành thị cao hơn so với các miền còn lại. Lý do là vì kinh tế phát triển mạnh, tập trung nhiều khu công nghiệp, chính sách thu hút đầu tư, cơ sở hạ tầng giao thông tốt, và sự đa dạng cơ hội nghề nghiệp, đặc biệt là tại TP.HCM và các thành phố lớn khác.\n"
@@ -468,11 +454,40 @@
    "source": [
     "## 1. Mối quan hệ giữa giáo viên và học sinh\n",
     "\n",
-    "<img src=\"./Image/mqh_gv_hs.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
+    "### Biểu đồ\n",
     "\n",
-    "## 2. Cơ sở y tế trên cơ sở giáo dục\n",
+    "<img src=\"./Image/31.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
     "\n",
-    "<img src=\"./Image/csyt_gd.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n"
+    "### Nhận xét\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Cơ sở y tế tại các tỉnh\n",
+    "\n",
+    "### Biểu đồ\n",
+    "\n",
+    "<img src=\"./Image/32.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
+    "\n",
+    "### Nhận xét"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Cơ sở giáo dục tại các tỉnh\n",
+    "### Biểu đồ\n",
+    "\n",
+    "<img src=\"./Image/33.png\" alt=\"Hình ảnh mẫu\" style=\"width: 80%;\">\n",
+    "\n",
+    "### Nhận xét"
    ]
   },
   {
